# perplexity-skill

./: .gitignore  README.md  SKILL.md  install.sh  pyproject.toml
.agents/RESEARCH/: 2026-02-22-research.md
.github/workflows/: release.yml
src/perplexity_cli/: __init__.py  config.py  main.py
