[project]
name = "perplexity-cli"
version = "0.1.0"
description = "Web search, reasoning, and deep research via Perplexity AI API."
readme = "README.md"
authors = [
    { name = "Bobby Hyam", email = "bobby@bobbyhyam.com" }
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic-settings>=2",
    "structlog>=24",
    "orjson>=3",
    "keyring>=25",
    "httpx>=0.27",
]

[project.scripts]
perplexity = "perplexity_cli.main:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-subprocess>=1",
    "pyinstaller>=6",
]
